# memovyn

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-06.jsonl  turns-2026-04-06.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
examples/: cursor.mcp.json
page/: index.html
scripts/: build-release-bundle.mjs  build-sea.mjs
src/: app.rs  app.ts  cli.ts  config.rs  config.ts  domain.rs  error.rs  errors.ts  http.ts  index.ts  lib.rs  main.rs  mcp.ts  model.ts  search.rs  search.ts  storage.ts  taxonomy.ts  types.ts
src/dashboard/: mod.rs
src/mcp/: mod.rs
src/model/: mod.rs
src/storage/: mod.rs
src/taxonomy/: mod.rs
static/: app.css  app.js
tests/: all.test.ts  config.test.ts  model.test.ts  search.test.ts  taxonomy.test.ts
